--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <title>the new page </title>
     </head>
     <body>
+        <h1>Welcome to my website</h1>
+        <img scr="page.jpg" alt="">
         <a href="http://wikipedia.org">click here</a>
+        <p>Make sure your pet has plenty of <i><b>fresh water</i> during hot weather.</p></b>
         <p>you can click to the link </p>
     </body>
 </html>
